feat: Round Robin and better handling of recording
Co-authored-by: Francesco Nigro  <nigro.fra@gmail.com>